# nfc-2

./: CMakeLists.txt  README  Rakefile  darwin.cmake  darwin.sh  gdbibm.sh  gdbjs.sh  host.sh  ibm.gdb  jsgdb.sh  jsmon.gdb  jsrun.sh  mingw.sh  rom.sh  sparc.cmake  sparc.sh
docs/: ._Doxyfile  Doxyfile
docs/latex/: _n_a_n_d_8c.tex  _n_f_c_8c.tex  _n_f_c_host_8c.tex  _n_f_c_target_8c.tex  _o_n_f_i_8c.tex  annotated.tex  crypto_8c.tex  crypto__ext_8c.tex  doxygen.sty  files.tex  group__lc.tex  group__pt.tex  group__ptsem.tex  lc-addrlabels_8h.tex  lc-switch_8h.tex  lc_8h.tex  modules.tex  onfi_8c.tex  onfistub_8c.tex  pt-sem_8h.tex  pt_8h.tex  refman.tex  struct_a_h_b_s_t_a_t___r_e_g_s.tex  struct_d_u_a_r_t___r_e_g_s.tex  struct_e_b_c_t_r_l___r_e_g_s.tex  struct_g_p_i_o___r_e_g_s.tex  struct_i7816___r_e_g_s.tex  struct_i_n_t___m_a_s_k___r_e_g_s.tex  struct_i_n_t___r_e_g_s.tex  struct_l_e_o_n___register___map.tex  struct_m_i2_c___r_e_g_s.tex  struct_r_o_o_t___p_a_g_e2.tex  struct_s_c_h___r_e_g_s.tex  struct_s_m_s4___r_e_g_s.tex  struct_t_i_m_e_r___c_f_g___r_e_g_s.tex  struct_t_m_r___r_e_g_s.tex  struct_u_a_r_t1___r_e_g_s.tex  structcryptodma__t.tex  structdevice__extension__s.tex  structleonbare__pt__regs.tex  (+6 more)
include/: ._NAND.h  ._NFC.h  ._ONFI.h  ._ONFI_timing.h  ._ONFI_timing.rb  ._ONFI_timing.yaml  ._config.h  ._device.h  ._errno.h  ._exponent_table_m13.hex  ._otg.h  ._usb.h  ._util.h  NAND.h  NFC.h  ONFI.h  ONFI_timing.h  ONFI_timing.rb  ONFI_timing.yaml  config.h  crypto.h  crypto_ext.h  device.h  errno.h  exponent_table_m13.hex  led.h  otg.h  stdint.h  thread.h  usb.h  util.h
include/pt/: ._pt-sem.h  ._pt.h
noel32/: ._NOEL32.h  NOEL32.h
noel32/boot/: ._init0.S  asmmacro.h  etrap.S  init0.S  leon.h  leon3.h  leonstack.h  rtrap.S  winmacros.h
noel32/isr/: ._isr.c  isr.c  isr.h
noel32/ldscript/: ._linkprom  linkprom
src/: ._NAND.c  ._NFC.c  ._ONFI.c  ._config.c  ._util.c  NAND.c  NFC.c  ONFI.c  config.c  crypto.c  crypto_ext.c  led.c  otg.c  thread.c  usb.c  util.c
src/opt/: ._printf.c  ._printf.h  printf.c  printf.h
tests/: ._helpers.c  ._helpers.h  helpers.c  helpers.h
tests/CRYPTO/: test_RHM.c  test_RHM_Runner.c  test_RSDM1.c  test_RSDM1_Runner.c  test_RSDM2.c  test_RSDM2_Runner.c  test_RSEM1.c  test_RSEM1_Runner.c  test_RSEM2.c  test_RSEM2_Runner.c
tests/NFC/: ._test_DMA.c  ._test_DMA_Runner.c  ._test_FTL.c  ._test_NAND.c  ._test_NFC.c  ._test_ONFI.c  ._test_as16.c  ._test_as8.c  ._test_bed.c  ._test_bed_Runner.c  ._test_dump.c  ._test_reading.c  ._test_reading_Runner.c  ._test_sync16.c  ._test_sync8.c  ._test_writing.c  test_DMA.c  test_DMA_Runner.c  test_FTL.c  test_FTL_Runner.c  test_NAND.c  test_NAND_Runner.c  test_NFC.c  test_NFC_Runner.c  test_ONFI.c  test_ONFI_Runner.c  test_as16.c  test_as16_Runner.c  test_as8.c  test_as8_Runner.c  test_bed.c  test_bed_Runner.c  test_dump.c  test_dump_Runner.c  test_reading.c  test_reading_Runner.c  test_sync16.c  test_sync16_Runner.c  test_sync8.c  test_sync8_Runner.c  (+2 more)
tests/USB/: usbc.c
tests/unity/: ._unity.c  ._unity.h  ._unity_internals.h  unity.c  unity_internals.h
